--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,19 @@
-Flask==3.1.2
-gunicorn==21.2.0
+# Web Framework
+Flask
+Flask-Bcrypt
+PyJWT
 
-SQLAlchemy==2.0.43
-mysql-connector-python==9.4.0
+# Banco de Dados
+SQLAlchemy
+mysql-connector-python
 
-requests==2.32.5
-python-dotenv==1.1.1
-tuya-connector-python==0.1.2
-websocket-client==1.8.0
+# APIs e Configuração
+requests
+python-dotenv
+tuya-connector-python
 
-opencv-python-headless==4.12.0.88
+# Processamento de Imagem (para a câmera)
+opencv-python-headless
 
-bcrypt==4.1.3
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==42.0.8
-dnspython==2.6.1
-dotenv_vault==0.3.0
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-mysql-connector-python==8.4.0
-numpy==1.26.4
-opencv-python==4.10.0.84
-PyJWT==2.8.0
-python-dotenv==1.0.1
-requests==2.32.3
-SQLAlchemy==2.0.31
-tuya-connector-python==1.1.2
-urllib3==2.2.2
-Werkzeug==3.0.3
+# Servidor de Produção (para o Render)
+gunicorn
